[gd_scene format=3 uid="uid://dmlv6qwqscm1l"]

[ext_resource type="Theme" uid="uid://dmkhe8cew5iql" path="res://resources/menu.tres" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://cr8qmx0tywwej" path="res://scripts/main.gd" id="2_sugp2"]
[ext_resource type="PackedScene" uid="uid://bms0qk0ry2w1m" path="res://scenes/game.tscn" id="3_sugp2"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jyhfs"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tbgi4"]

[sub_resource type="AnimationNodeBlend2" id="AnimationNodeBlend2_tefeu"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_o6xl0"]
nodes/output/position = Vector2(340, 180)
nodes/Animation/node = SubResource("AnimationNodeAnimation_tbgi4")
nodes/Animation/position = Vector2(-60, 40)
"nodes/Animation 2/node" = SubResource("AnimationNodeAnimation_jyhfs")
"nodes/Animation 2/position" = Vector2(-60, 200)
nodes/Blend2/node = SubResource("AnimationNodeBlend2_tefeu")
nodes/Blend2/position = Vector2(120, 80)
node_connections = [&"output", 0, &"Blend2", &"Blend2", 0, &"Animation", &"Blend2", 1, &"Animation 2"]

[node name="Main" type="Control" unique_id=1782224110]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0wfyh")
script = ExtResource("2_sugp2")

[node name="MenuLayer" type="CanvasLayer" parent="." unique_id=117206752]

[node name="MainMenu" type="MarginContainer" parent="MenuLayer" unique_id=841445392]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonContainer" type="VBoxContainer" parent="MenuLayer/MainMenu" unique_id=2141478935]
layout_mode = 2
alignment = 1

[node name="PlayButton" type="Button" parent="MenuLayer/MainMenu/ButtonContainer" unique_id=1015722316]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
text = "Play"

[node name="SettingsButton" type="Button" parent="MenuLayer/MainMenu/ButtonContainer" unique_id=1935532791]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MenuLayer/MainMenu/ButtonContainer" unique_id=136901173]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
text = "Quit"

[node name="GameLayer" type="CanvasLayer" parent="." unique_id=271618148]

[node name="Game" parent="GameLayer" unique_id=2081310658 instance=ExtResource("3_sugp2")]
process_mode = 4
visible = false

[node name="AnimationTree" type="AnimationTree" parent="." unique_id=904661689]
tree_root = SubResource("AnimationNodeBlendTree_o6xl0")
anim_player = NodePath("../TransitionAnimationPlayer")
parameters/Blend2/blend_amount = 0.0

[node name="TransitionAnimationPlayer" type="AnimationPlayer" parent="." unique_id=866065326]
